Spacing fixed

--- a/styles/TermsAndConditions.module.css
+++ b/styles/TermsAndConditions.module.css
@@ -5,7 +5,7 @@
 }
 
 .showcase__content{
-  width: 90%;
+  width: 86%;
   margin: auto;
   padding-top: 6%;
 }
@@ -42,7 +42,7 @@
 }
 
 .content__container{
-  width: 90%;
+  width: 86%;
   margin: auto;
   margin-top:60px;
 }
